--- a/paper.tex
+++ b/paper.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{report}
 \usepackage[
-  dissertation
- ,final
+  proposal
+ % ,final
  ,raggedbottom
 %,tocbold        % uncomment to enable bold chapter titles in the ToC
                  %
@@ -17,17 +17,20 @@
 \usepackage[export]{adjustbox} % for frame option in \includegraphics
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{mathtools}
 \usepackage{array}
 \usepackage[utf8]{inputenc} % load inputenc before csquotes
 \usepackage[english]{babel}
-\usepackage[
-  backend     = biber,
-  doi         = true,
-  hyperref    = true,
-  maxbibnames = 99,
-  sortlocale  = en_US,
-  style       = numeric,
-]{biblatex}
+% \usepackage[
+%   backend     = biber,
+%   doi         = true,
+%   hyperref    = true,
+%   maxbibnames = 99,
+%   sortlocale  = en_US,
+%   style       = numeric,
+% ]{biblatex}
+\usepackage[authordate, backend=biber, autocite=inline]{biblatex-chicago}
+
 \usepackage{booktabs}
 \usepackage{color, colortbl}
 \usepackage{csquotes}
@@ -59,21 +62,21 @@
 \usepackage{xspace}
 \usepackage{url}
 
-\usepackage[
-  breaklinks    = true,
-  colorlinks    = true,
-  hypertexnames = false,
-  pdfpagelabels = false,
-  citecolor     = {blue!80!black},
-  linkcolor     = {blue!80!black},
-  urlcolor      = {blue!80!black},
-]{hyperref} % load hyperref as the last package
+% \usepackage[
+%   breaklinks    = false,
+%   colorlinks    = false,
+%   hypertexnames = false,
+%   pdfpagelabels = false,
+%   citecolor     = {blue!80!black},
+%   linkcolor     = {blue!80!black},
+%   urlcolor      = {blue!80!black}
+% ]{hyperref} % load hyperref as the last package
 
 % pkg: biblatex
 \setlength\bibitemsep{0.5\baselineskip}                 % add a line between entries
 \AtEveryBibitem{\iffieldundef{doi}{}{\clearfield{url}}} % if DOI, hide URL
 
-\addbibresource{paper.bib}
+\addbibresource{references.bib}
 
 % pkg: siunitx
 % some guidelines https://physics.nist.gov/cuu/Units/checklist.html
@@ -87,12 +90,12 @@
 }
 
 % pkg: babel, hyperref
-\addto\extrasenglish{%
-  \renewcommand{\chapterautorefname}{Chapter}
-  \renewcommand{\sectionautorefname}{Section}
-  \renewcommand{\subsectionautorefname}{Section}
-  \renewcommand{\subsubsectionautorefname}{Section}
-}
+% \addto\extrasenglish{%
+%   \renewcommand{\chapterautorefname}{Chapter}
+%   \renewcommand{\sectionautorefname}{Section}
+%   \renewcommand{\subsectionautorefname}{Section}
+%   \renewcommand{\subsubsectionautorefname}{Section}
+% }
 
 % pkg: url
 \renewcommand{\UrlFont}{\footnotesize\tt}
@@ -117,40 +120,46 @@
 % content behind a toggle (or conditional) so you only have to maintain
 % and keep consistency on one copy. see "introduction.tex".
 \newtoggle{thesis}
-\settoggle{thesis}{true}
+\settoggle{thesis}{false}
+% \proposaltrue
+% \newtoggle{proposal} %!!! Jeff
+% \settoggle{proposal}{true}
 
-\usepackage[inline]{showlabels}
-\renewcommand{\showlabelfont}{\sffamily \color{blue}}
-\renewcommand{\showlabelsetlabel}[1]{\efbox{\showlabelfont #1}}
+% \usepackage[inline]{showlabels} # labels in blue!
+% \renewcommand{\showlabelfont}{\sffamily \color{blue}}
+% \renewcommand{\showlabelsetlabel}[1]{\efbox{\showlabelfont #1}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%% front matter %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
 % title should be all caps
-\title{[DISSERTATION TITLE]}
+\title{Health Service Environment Measures and Application in Low- and Middle-Income Countries}
 
 % use your full name!
 % https://cs.stanford.edu/~knuth/news19.html
 % "Let's celebrate everybody's full names"
-\author{[Full Name]}
+\author{Jeffrey William Rozelle}
 
 % major should be all caps
-\majorfield{[MAJOR]}
+\majorfield{Population, Health and Place}
 
 % date should be May, August, or December (when degrees are conferred)
-\submitdate{August 20XX}
+\submitdate{August 2023}
+
+\copyrightyear{2023}
 
 %%% preface %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{preface}
-  \prefacesection{Dedication}
-  \input{dedication.tex}
 
-  \prefacesection{Acknowledgements}
-  \input{acknowledgements.tex}
+  % \prefacesection{Dedication}
+  % \input{dedication.tex}
+
+  % \prefacesection{Acknowledgements}
+  % \input{acknowledgements.tex}
 
   {
-  \hypersetup{hidelinks} % color all links black in the preface
+  % \hypersetup{hidelinks} % color all links black in the preface
   \tableofcontents
   \listoftables
   \listoffigures
@@ -158,11 +167,12 @@
 
   \prefacesection{Abstract}
   \input{abstract.tex}
+  
 \end{preface}
 
 %%% introduction %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Introduction}
-  \label{ch:introduction}
+\chapter{Introduction} 
+\label{ch:introduction}
 
 \graphicspath{}
 \input{introduction.tex}
@@ -219,69 +229,21 @@
 
 %%% chapters: lorem ipsum %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% The following text is to test ToC alignment:
-% - of extremely long chapter, section, subsection, and
-%   subsubsection titles
-% - when chapter numbers are double digits
+\chapter{Determinants of Health Facility Client Satisfation in Low- and Middle- Income Countries}
+\label{ch:clientSat}
 
-\chapter{This is a very long title which will take up more than one line
-lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ultrices vitae
-auctor eu augue ut lectus arcu. Enim nunc faucibus a pellentesque sit
-amet porttitor eget. Consequat mauris nunc congue nisi vitae.}
-  \label{ch:long-title}
+\input{clientSatisfaction}
 
-\section{Ut enim ad minim veniam, quis nostrud exercitation ullamco
-laboris nisi ut aliquip ex ea commodo consequat}
+\chapter{Linking Geomasked Demographic and Health Service Data and Other Spatial Layers: A Simulation Study}
+\label{ch:simStudy}
 
-\subsection{Duis aute irure dolor in reprehenderit in voluptate velit
-esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-id est laborum.}
+\input{simStudy}
 
-\subsubsection{Etiam erat velit scelerisque in dictum non. Sit amet
-justo donec enim diam. Amet justo donec enim diam. Metus vulputate eu
-scelerisque felis imperdiet proin. In nulla posuere sollicitudin aliquam
-ultrices. Turpis in eu mi bibendum.}
+\chapter{Health Service Environment \& Service Utilization}
+\label{ch:hseUtilization}
 
-\chapter{Lorem Ipsum}
-\chapter{Lorem Ipsum}
-\chapter{Lorem Ipsum}
-\chapter{Lorem Ipsum}
-\chapter{Lorem Ipsum}
-\chapter{Lorem Ipsum}
-\chapter{Lorem Ipsum}
-\chapter{Lorem Ipsum}
-\chapter{Etiam erat velit scelerisque in dictum non. Sit amet
-justo donec enim diam. Amet justo donec enim diam. Metus vulputate eu
-scelerisque felis imperdiet proin. In nulla posuere sollicitudin aliquam
-ultrices. Turpis in eu mi bibendum.}
+\input{hseUtilization}
 
-\begin{table}
-\centering
-\begin{tabular}{lS}
-\toprule
-$x$      & \textbf{value} \\
-\midrule
-a        & 1.23           \\
-b        & 3.456          \\
-c        & 100.0002       \\
-d        & 12345.0        \\
-\bottomrule
-\end{tabular}
-\caption[In hendrerit gravida rutrum quisque non tellus orci ac. Iaculis
-        urna id volutpat lacus laoreet non curabitur gravida arcu. Mauris
-        ultrices eros in cursus turpis massa. Sed tempus urna et pharetra
-        pharetra massa massa. Eget sit amet tellus cras adipiscing enim eu
-        turpis egestas. Morbi blandit cursus risus at ultrices.]
-        {In hendrerit gravida rutrum quisque non tellus orci ac. Iaculis
-        urna id volutpat lacus laoreet non curabitur gravida arcu.
-        Mauris ultrices eros in cursus turpis massa. Sed tempus urna et
-        pharetra pharetra massa massa. Eget sit amet tellus cras
-        adipiscing enim eu turpis egestas. Morbi blandit cursus risus at
-        ultrices.}
-\label{tbl:example-2}
-\end{table}
 
 %%% conclusions %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Conclusions}
@@ -308,8 +270,9 @@ d        & 12345.0        \\
 %  * we use \raggedright so things like URLs and DOIs aren't stretched out.
 %
 \clearpage
-\chapter*{Bibliography}
-\addcontentsline{toc}{chapter}{Bibliography}
+% \chapter*{Bibliography}
+% \addcontentsline{toc}{chapter}{Bibliography}
+% \printbibliography{}
 
 \begin{singlespace}
   % increase penalty such that we don't break entries over pages
